--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "antd": "^5.22.4",
     "axios": "^1.7.8",
+    "dayjs": "^1.11.13",
     "flowbite-react": "^0.10.2",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
+    "react-slick": "^0.30.2",
+    "react-spinners": "^0.15.0",
     "sass": "^1.81.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.15",
     "yup": "^1.4.0"
   },
